編輯器新增建築及勢力修改

--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Button x:Name="btnLoad" Content="讀取劇本" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="btnLoad_Click"/>
         <TabControl HorizontalAlignment="Left" Height="525" Margin="10,34,0,0" VerticalAlignment="Top" Width="932">
-            <TabItem Header="武將" Margin="0">
+            <TabItem Header="武將">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgPerson" HorizontalAlignment="Left" Height="498" VerticalAlignment="Top" Width="926"/>
                 </Grid>
@@ -29,16 +29,22 @@
                     <DataGrid x:Name="dgSpouseId" HorizontalAlignment="Left" Height="498" VerticalAlignment="Top" Width="926"/>
                 </Grid>
             </TabItem>
+            <!--
             <TabItem Header="義兄">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgBrotherId" HorizontalAlignment="Left" Height="498" VerticalAlignment="Top" Width="926"/>
                 </Grid>
             </TabItem>
+            -->
             <TabItem Header="建築">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgArchitecture" HorizontalAlignment="Left" Height="498" VerticalAlignment="Top" Width="926"/>
+                </Grid>
             </TabItem>
             <TabItem Header="勢力">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgFaction" HorizontalAlignment="Left" Height="498" VerticalAlignment="Top" Width="926"/>
+                </Grid>
             </TabItem>
         </TabControl>
         <Button x:Name="btnSave" Content="保存劇本" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Click="btnSave_Click"/>
