--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -27,6 +27,9 @@
                     <MenuItem Header="貼上" Command="Paste" InputGestureText="Ctrl+V"/>
                     <MenuItem Header="刪除" Command="Delete"/>
                 </MenuItem>
+                <MenuItem Header="功能">
+                    <MenuItem Header="新增勢力" Click="btnNewFaction_Click"/>
+                </MenuItem>
             </Menu>
             <StackPanel Height="552" VerticalAlignment="Bottom"></StackPanel>
         </DockPanel>
