--- a/WorldOfTheThreeKingdomsEditor/NewFactionWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/NewFactionWindow.xaml
@@ -7,14 +7,14 @@
         mc:Ignorable="d"
         Title="建立勢力" Height="200" Width="400">
     <Grid>
-        <Label Content="武將ID(逗號分隔)" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.675,0.68"/>
+        <Label Content="武將ID(空格分隔)" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.675,0.68"/>
         <TextBox Name="tbPersons" Height="23" Margin="117,12,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" RenderTransformOrigin="-0.4,0.13"/>
         <Label Content="君主ID" HorizontalAlignment="Left" Margin="66,38,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.75,0.6"/>
         <TextBox Name="tbFactionLeaderID" HorizontalAlignment="Left" Height="23" Margin="117,40,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.075,0.13"/>
         <Label Content="起始建築ID" HorizontalAlignment="Left" Margin="42,66,0,0" VerticalAlignment="Top"/>
         <TextBox Name="tbStartingArchitectureID" HorizontalAlignment="Left" Height="23" Margin="117,68,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.525,0.565"/>
         <Label Content="勢力顏色ID" HorizontalAlignment="Left" Margin="42,94,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="117,96,0,0" TextWrapping="Wrap" Text="52" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="tbColorID" HorizontalAlignment="Left" Height="23" Margin="117,96,0,0" TextWrapping="Wrap" Text="52" VerticalAlignment="Top" Width="120"/>
         <Button Content="確定" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Click="Button_Click"/>
 
     </Grid>
