--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -20,6 +20,8 @@
                     <MenuItem Header="讀取劇本" Command="Open" InputGestureText="Ctrl+O"/>
                     <MenuItem Header="儲存劇本" Command="Save" InputGestureText="Ctrl+S"/>
                     <Separator/>
+                    <MenuItem Header="更新Scenario.json" Click="btnSyncScenario_Click"/>
+                    <Separator/>
                     <MenuItem Header="退出" Click="btnQuit_Click"/>
                 </MenuItem>
                 <MenuItem Header="編輯">
