--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -31,6 +31,7 @@
                 </MenuItem>
                 <MenuItem Header="功能">
                     <MenuItem Header="新增勢力" Click="btnNewFaction_Click"/>
+                    <MenuItem Header="新增隨機武將" Click="btnNewPerson_Click" IsEnabled="False"/>
                     <Separator/>
                     <MenuItem Header="隨機化相性" Click="btnRandomizeIdeal_Click"/>
                 </MenuItem>
