--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -13,34 +13,35 @@
         <CommandBinding Command="Paste" Executed="PasteCommandBinding_Executed"/>
         <CommandBinding Command="Delete" Executed="DeleteCommandBinding_Executed"/>
     </Window.CommandBindings>
-    <Grid>
-        <DockPanel>
-            <Menu DockPanel.Dock="Top">
-                <MenuItem Header="檔案">
-                    <MenuItem Header="讀取劇本" Command="Open" InputGestureText="Ctrl+O"/>
-                    <MenuItem Header="儲存劇本" Command="Save" InputGestureText="Ctrl+S"/>
-                    <Separator/>
-                    <MenuItem Header="更新Scenarios.json" Click="btnSyncScenario_Click"/>
-                    <Separator/>
-                    <MenuItem Header="退出" Click="btnQuit_Click"/>
-                </MenuItem>
-                <MenuItem Header="編輯">
-                    <MenuItem IsCheckable="true" Header="包含標題" IsChecked="true" Checked="MenuItem_IncludeTitle_Checked" Unchecked="MenuItem_IncludeTitle_Unchecked"/>
-                    <MenuItem Header="複製" Command="Copy" InputGestureText="Ctrl+C"/>
-                    <MenuItem Header="貼上" Command="Paste" InputGestureText="Ctrl+V"/>
-                    <MenuItem Header="刪除" Command="Delete"/>
-                </MenuItem>
-                <MenuItem Header="功能">
-                    <MenuItem Header="新增勢力" Click="btnNewFaction_Click"/>
-                    <MenuItem Header="新增隨機武將" Click="btnNewPerson_Click" IsEnabled="False"/>
-                    <Separator/>
-                    <MenuItem Header="隨機化相性" Click="btnRandomizeIdeal_Click"/>
-                </MenuItem>
-            </Menu>
-            <StackPanel Height="552" VerticalAlignment="Bottom"></StackPanel>
-        </DockPanel>
-
-        <TabControl x:Name="tabControl" Margin="10,24,10,10">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="檔案">
+                <MenuItem Header="讀取劇本" Command="Open" InputGestureText="Ctrl+O"/>
+                <MenuItem Header="儲存劇本" Command="Save" InputGestureText="Ctrl+S"/>
+                <Separator/>
+                <MenuItem Header="更新Scenarios.json" Click="btnSyncScenario_Click"/>
+                <Separator/>
+                <MenuItem Header="退出" Click="btnQuit_Click"/>
+            </MenuItem>
+            <MenuItem Header="編輯">
+                <!--<MenuItem IsCheckable="true" Header="包含標題" IsChecked="true" Checked="MenuItem_IncludeTitle_Checked" Unchecked="MenuItem_IncludeTitle_Unchecked"/>-->
+                <MenuItem Header="複製" Command="Copy" InputGestureText="Ctrl+C"/>
+                <MenuItem Header="貼上" Command="Paste" InputGestureText="Ctrl+V"/>
+                <MenuItem Header="刪除" Command="Delete"/>
+            </MenuItem>
+            <MenuItem Header="功能">
+                <MenuItem Header="新增勢力" Click="btnNewFaction_Click"/>
+                <MenuItem Header="新增隨機武將" Click="btnNewPerson_Click" IsEnabled="False"/>
+                <Separator/>
+                <MenuItem Header="隨機化相性" Click="btnRandomizeIdeal_Click"/>
+            </MenuItem>
+        </Menu>
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBlock Name="lblColumnHelp"/>
+            </StatusBarItem>
+        </StatusBar>
+        <TabControl x:Name="tabControl" Margin="10,10,10,10">
             <TabItem Header="武將">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgPerson"/>
@@ -195,5 +196,5 @@
                 </Grid>
             </TabItem>
         </TabControl>
-    </Grid>
+    </DockPanel>
 </Window>
